--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <form id="loginForm">
             <div class="mb-3">
                 <label for="npsn" class="form-label">NPSN</label>
-                <input type="text" class="form-control" id="npsn" placeholder="Enter NPSN" value="20325338" required>
+                <input type="text" class="form-control" id="npsn" placeholder="Enter NPSN" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter Password" value="20325338" required>
+                <input type="password" class="form-control" id="password" placeholder="Enter Password" required>
             </div>
             <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
