--- a/form.html
+++ b/form.html
@@ -127,6 +127,7 @@
                   />
                 </div>
               </div>
+              <a href="index.html" class="btn btn-warning">Keluar</a>
             </form>
           </div>
         </div>
