--- a/form.html
+++ b/form.html
@@ -217,7 +217,7 @@
                 </div>
               </div>
               <div class="col-md-12 text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Kirim Laporan</button>
               </div>
             </form>
           </div>
