--- a/form.html
+++ b/form.html
@@ -127,7 +127,7 @@
                   />
                 </div>
               </div>
-              <a href="./" class="btn btn-warning">Keluar</a>
+              <a href="#" id="logoutButton" class="btn btn-danger" style="width:100%;">Keluar</a>
             </form>
           </div>
         </div>
@@ -373,6 +373,18 @@
             .catch((error) => console.error("Error submitting form:", error));
         });
     </script>
+  <script>
+    document.getElementById("logoutButton").addEventListener("click", function (event) {
+      event.preventDefault(); // Mencegah default behavior dari anchor
+      
+      // Hapus data dari sessionStorage atau localStorage jika diperlukan
+      sessionStorage.clear();
+      localStorage.clear();
+  
+      // Mengarahkan kembali ke halaman login atau halaman utama
+      window.location.href = "./login.html"; // Sesuaikan dengan halaman login Anda
+    });
+  </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
