--- a/form.html
+++ b/form.html
@@ -382,7 +382,7 @@
       localStorage.clear();
   
       // Mengarahkan kembali ke halaman login atau halaman utama
-      window.location.href = "./login.html"; // Sesuaikan dengan halaman login Anda
+      window.location.href = "./"; // Sesuaikan dengan halaman login Anda
     });
   </script>
 
